[project]
name = "minimal-mcp-server"
version = "0.1.0"
description = "A minimal MCP server built with FastMCP"
dependencies = [
    "fastmcp>=0.1.0"
]
requires-python = ">=3.10"

[project.scripts]
mcp-server = "main:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py"]

[tool.uv]
dev-dependencies = []
